# biobloom

./: CMakeLists.txt
BioBloomMaker/: BloomFilterGenerator.cpp  BloomFilterGenerator.h  WindowedFileParser.cpp  WindowedFileParser.h
Common/: ReadsProcessor.h  SeqEval.h
